compiler/testData/diagnostics/tests/typealias/throwJLException.kt
// +JDK

typealias Exn = java.lang.Exception

fun test() {
    throw <!NO_COMPANION_OBJECT!>Exn<!>
}